# pkt-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
builds/: apply_filepatch.py  corporate-network.pkt  demo.py
docs/: architecture.md  phase1-investigation.md  phase2-api-map.md  phase3-protocol.md  phase4-mcp.md  phase5-kickoff.md  phase5.1-module-api.md  phase5.2-bulk-ops.md
pkt_mcp/: server.py
probes/: phase411_zones_probe.js  phase411_zones_probe2.js  phase411_zones_probe3.js  phase47_probe.js  phase47_probe2.js  phase47_probe2_result.json  phase47_probe_result.json  phase51_module_probe.js  phase51_module_probe2.js  phase51_probe2_result.json  phase51_probe_result.json  run_phase47_probe.py  run_phase51_probe.py  run_phase51_probe2.py  run_phase51_smoke.py  run_phase52_scale_bench.py  run_phase52_smoke.py  run_zones_probe.py
pt-bridge/: pom.xml
pt-bridge/src/main/java/: Spike.java
pt-script-module/: INSTALL.md  api.js  main.js
tests/: test_smoke.py
tools/: pkt_bridge.py  pkt_services.py  pkt_zones.py
tools/unpacket/: LICENSE-UNPACKET  README.md  eax.py  pt_crypto.py
