[project]
name = "pkt-mcp"
version = "0.1.0"
description = "MCP server that drives Cisco Packet Tracer via an in-PT Script Module bridge"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[tool.uv]
# Dependency-only project — no build hooks. `uv run python -m pkt_mcp.server`
# works because `python -m` puts the CWD on sys.path, and pkt_mcp/ lives at
# the repo root.
package = false
